v4.9.0/_sources/generated/pcdsdevices.wfs.WaveFrontSensorTarget.rst.txt
pcdsdevices.wfs.WaveFrontSensorTarget
=====================================

.. currentmodule:: pcdsdevices.wfs

.. autoclass:: WaveFrontSensorTarget

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - target
          - :class:`~pcdsdevices.pmps.TwinCATStatePMPS`
          - ``:MMS:STATE``
          - Control of the diagnostic stack via saved positions.
          - hinted
          - 
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Y``
          - Direct control of the diagnostic stack motor.
          - normal
          - 
    
        * - z_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Z``
          - Z position of target stack for focus control.
          - normal
          - 
    
        * - thermocouple1
          - :class:`~pcdsdevices.sensors.TwinCATTempSensor`
          - ``:STC:01``
          - First thermocouple.
          - normal
          - 
    
        * - thermocouple2
          - :class:`~pcdsdevices.sensors.TwinCATTempSensor`
          - ``:STC:02``
          - Second thermocouple.
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: transmission
    
    